# sdet-brain-win

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: chat-test.html  sanitization-audit.md  sdet-canvas-2026-05-13.md  troubleshooting.md  upstream-sync.md  windows-setup.md
docs/adr/: 0001-repo-architecture.md
docs/benchmarks/: hybrid-vs-semantic.md
docs/sprints/: T1-01-bootstrap.md  T1-02-qdrant.md  T1-03-embeddings.md  T1-04-parser.md  T1-05-pipeline.md  T1-06-server.md  T1-07-mcp-tools.md  T1-08-watcher.md  v0.1.0-initial-ingest-snapshot.md  v0.1.0-tier-1-sprint-report.md  v0.3.0-tier-2-3-overnight-sprint.md  v0.4.0-tier-4-all-in-sprint.md  v0.5.0-tier-5-dx-sprint.md  v0.5.1-public-release-sprint-report.md  v0.5.2-restore-authentic-history-sprint-report.md
examples/: claude-code-mcp.json  claude-desktop-mcp.json
examples/templates/: decision-history.yaml  series-status.yaml  voice-check.yaml  wcag-fact-check.yaml
migrations/: 20260501-065259-frontmatter-migration-apply.md
scripts/: README.md  bootstrap.ps1  check_no_pii.sh  daily.py  daily.sh  digest.py  healthcheck.sh  update.ps1  warmup.py  windows-task-scheduler.xml
scripts/examples/: com.example.sdet-brain-daily.plist.example  discord.env.example  paths.env.example
src/sdet_brain/: __init__.py  config.py
src/sdet_brain/cli/: __init__.py  chat_repl.py  embed_cli.py  ingest_cli.py  main_cli.py  migrate_frontmatter.py  qdrant_cli.py  search_cli.py  templates.py  templates_cli.py  watcher_cli.py
src/sdet_brain/embeddings/: __init__.py  factory.py  gemini_provider.py  mlx_provider.py  ollama_provider.py  protocol.py  reranker.py  sparse_embedder.py
src/sdet_brain/ingestion/: __init__.py  chunker.py  document_parser.py  frontmatter_classifier.py  frontmatter_parser.py  frontmatter_schema.py  image_parser.py  models.py  pipeline.py  source_classifier.py  watcher.py
src/sdet_brain/llm/: __init__.py  factory.py  mlx_provider.py  protocol.py  router.py
src/sdet_brain/ocr/: __init__.py  factory.py  ollama_provider.py  prompts.py  protocol.py
src/sdet_brain/server/: __init__.py  __main__.py  app.py  dependencies.py  mcp_server.py  mcp_sse.py  mcp_stdio.py  state.py
src/sdet_brain/server/chat/: __init__.py  models.py  pipeline.py  prompt_template.py
src/sdet_brain/server/routes/: chat.py  health.py  ingest.py  search.py  status.py
src/sdet_brain/server/tools/: _helpers.py  get_chunk_neighbors.py  ingest.py  ingest_image.py  list_sources.py  multi_query.py  query_rewrite.py  search.py  summarize_results.py
src/sdet_brain/server/tools/domain/: __init__.py  _common.py  articles.py  decisions.py  smaczki.py  sprint_reports.py  voice_samples.py
src/sdet_brain/storage/: __init__.py  collections.py  qdrant_client.py
tests/: test_smoke.py
tests/cli/: test_chat_repl.py  test_search_cli.py  test_templates.py
tests/embeddings/: test_factory.py  test_gemini_provider.py  test_mlx_provider.py  test_ollama_provider.py  test_protocol.py  test_reranker.py  test_sparse_embedder.py
tests/ingestion/: test_chunker.py  test_document_parser.py  test_frontmatter.py  test_frontmatter_classifier.py  test_frontmatter_schema.py  test_image_parser.py  test_iter_ingestible_files.py  test_iter_markdown_files.py  test_pipeline.py  test_pipeline_dispatch.py  test_watcher.py
tests/ingestion/fixtures/: complex.md  simple.md  voice-sample.md
tests/llm/: test_protocol_and_factory.py  test_router.py
tests/ocr/: test_factory.py  test_ollama_provider.py  test_prompts.py
tests/server/: conftest.py  test_app_lifespan.py  test_chat.py  test_domain_tools.py  test_health.py  test_ingest_image_tool.py  test_llm_tools.py  test_multi_query.py  test_tools.py
tests/storage/: conftest.py  test_qdrant_client.py
