[project]
name = "sdet-brain"
version = "0.1.0"
description = "Persistent RAG for SDET brand domain - shared context across Claude clients via MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Dariusz Kowalski", email = "darek@sdet.it" }]
keywords = ["rag", "mcp", "qdrant", "embeddings", "fastapi"]

dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=3.0.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "watchdog>=5.0.0",
    "python-frontmatter>=1.1.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=0.8.0",
    "tenacity>=9.0.0",
    "tqdm>=4.66.0",
    "mlx-embeddings>=0.0.3 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "types-pyyaml>=6.0.12",
    "types-tqdm>=4.66.0",
]

[project.scripts]
sdet-brain-server = "sdet_brain.server.app:main"
sdet-brain-mcp-stdio = "sdet_brain.server.mcp_stdio:main"
sdet-brain-mcp-sse = "sdet_brain.server.mcp_sse:main"
sdet-brain-watcher = "sdet_brain.cli.watcher_cli:main"
sdet-brain-cli = "sdet_brain.cli.ingest_cli:main"
sdet-brain-qdrant = "sdet_brain.cli.qdrant_cli:main"
sdet-brain-embed = "sdet_brain.cli.embed_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdet_brain"]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["frontmatter.*", "watchdog.*", "mlx.*", "mlx_embeddings.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "RET", # flake8-return
    "ASYNC",
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
