[project]
name = "sdet-brain-win"
version = "0.3.0+win.0"
description = "Windows + CUDA variant of sdet-brain. Stripped MLX provider and LLM router for 4 GB VRAM target."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Dariusz Kowalski", email = "darek@sdet.it" }]
keywords = ["rag", "mcp", "qdrant", "embeddings", "fastapi"]

dependencies = [
    "fastapi>=0.137.2",
    "fastmcp>=3.4.2",
    "qdrant-client>=1.18.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "watchdog>=5.0.0",
    "python-frontmatter>=1.3.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.49.0",
    "google-genai>=2.8.0",
    "tenacity>=9.0.0",
    "tqdm>=4.68.3",
    "fastembed>=0.4",
    "psutil>=5.9",
    "windows-toasts>=1.1.0 ; sys_platform == 'win32'",
    "pillow>=10.0.0",
    "pillow-heif>=1.4.0",
    "pypdfium2>=5.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "mypy>=2.1.0",
    "ruff>=0.15.17,<0.16",
    "types-pyyaml>=6.0.12.20260518",
    "types-tqdm>=4.68.0.20260608",
]

[project.scripts]
sdet-brain-server = "sdet_brain.server.__main__:cli"
sdet-brain-mcp-stdio = "sdet_brain.server.mcp_stdio:main"
sdet-brain-mcp-sse = "sdet_brain.server.mcp_sse:main"
sdet-brain-watcher = "sdet_brain.cli.watcher_cli:main"
sdet-brain-cli = "sdet_brain.cli.main_cli:main"
sdet-brain-ingest = "sdet_brain.cli.ingest_cli:main"
sdet-brain-search = "sdet_brain.cli.search_cli:main"
sdet-brain-qdrant = "sdet_brain.cli.qdrant_cli:main"
sdet-brain-embed = "sdet_brain.cli.embed_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdet_brain"]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["frontmatter.*", "watchdog.*", "pillow_heif.*", "pypdfium2.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "RET", # flake8-return
    "ASYNC",
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # allow assert in tests
# FastAPI's `Depends()` pattern uses function-call defaults by design.
"src/sdet_brain/server/routes/*.py" = ["B008"]
"src/sdet_brain/server/dependencies.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
